aci-connector.yaml
apiVersion: v1
kind: Pod
metadata:
  name: aci-connector
  namespace: default
spec:
  containers:
  - name: aci-connector
    image: microsoft/aci-connector-k8s:latest
    imagePullPolicy: Always
