go-web-aci.yaml
apiVersion: v1
kind: Pod
metadata:
  name: go-web-aci
  namespace: default
spec:
  containers:
  - name: go-web-aci
    image: chzbrgr71/go-web:aci
    ports:
      - containerPort: 8080
  imagePullSecrets:
    - name: acrregistrykey
  dnsPolicy: ClusterFirst
  nodeName: aci-connector
