go-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-web
  labels:
    app: go-web
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    run: go-web
