go-web-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: go-web
  labels:
    app: go-web
spec:
  selector:
    run: go-web
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: LoadBalancer
