go-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-web
  labels:
    app: go-web
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8001
  selector:
    run: go-web
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: go-web
spec:
  replicas: 5
  template:
    metadata:
      labels:
        run: go-web
        app: go-web
    spec:
      containers:
      - name: go-web
        image: chzbrgr71/go-web
        ports:
          - containerPort: 8001
      imagePullSecrets:
        - name: myregistrykey
